# pessoas.cc

./: .gitignore  Procfile  env.example  manage.py  pyproject.toml  requirements.txt
pessoas/: settings.py  urls.py  wsgi.py
pessoas-old/posts/: urls.py  views.py
pessoas-old/posts/templates/posts/: category_post.html
pessoas-old/posts/templatetags/: poems_tags.py
pessoas-old/proj/: settings.py  urls.py
pessoas-old/templates/: base.html
pessoas/pessoas/: asgi.py  settings.py  urls.py  wsgi.py
pessoas/posts/: context_processors.py  views.py
pessoas/posts/migrations/: 0004_newpoemspost_author.py
pessoas/templates/: 404.html
posts/: admin.py  context_processors.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py
posts/templates/posts/: index.html
project/src/: settings.py  urls.py  wsgi.py
project/src/core/: models.py
project/src/core/migrations/: 0001_initial.py  0002_auto_20190402_1147.py  0003_auto_20190402_1148.py  0004_auto_20190402_1155.py  0005_auto_20190402_1201.py  0006_auto_20190402_1201.py  0007_auto_20190402_0915.py  0008_auto_20190402_0916.py  0009_auto_20190403_0723.py
project/src/posts/: admin.py  context_processors.py  models.py  urls.py  views.py
project/src/posts/migrations/: 0001_initial.py  0002_auto_20190402_1208.py  0002_auto_20190404_0832.py  0003_auto_20190404_0833.py  0005_auto_20190501_1843.py  (+2 more)
project/static/css/: main.css
project/static/js/: main.js  responsiveVideos.js
project/templates/: about.html  base.html
scripts/: auth.json  load_users.py  posts-ident.json
templates/: base.html
(+3 files in other folders)
