[project]
name = "pessoas-cc"
version = "2.0.0"
description = ""
authors = [
    {name = "Bernardo Fontes",email = "bernardoxhc@gmail.com"}
]
license = {text = "GNU General Public License v3.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-extensions (>=4.1,<5.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django-heroku (>=0.3.1,<0.4.0)"
]

[tool.poetry]
packages = [{include = "pessoas"}]

[tool.poetry.group.dev.dependencies]
ipython = "^9.1.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
